Add minor changes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div> -->
 
                 Add class fill to make the backgroup full page
-                <div class="intro-header fill" style="background-image: url(img/ghana01.jpg)">
+                <div class="intro-header fill" style="background-image: url(img/ghana00.jpg)">
                     <div class="container">
 
                         <div class="row">
@@ -126,14 +126,14 @@
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('img/ghana00.jpg');"></div>
+                <div class="fill" style="background-image:url('img/ghana06.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 2</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('img/ghana02.jpg');"></div>
+                <div class="fill" style="background-image:url('img/logo00.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
@@ -253,8 +253,14 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                    <h2 class="section-heading"> Thanksgiving </h2>
+                    <p class="lead">
+                    We would want to express our profound gratitude to the over 30 Ghanaians who graced the program. </br>
+
+                    Help us as new executives to Rebuild an all inclusive union which is the sole focus of this administration.</br> Thank you. </br></br>
+
+                    Amissah Gideon</br> General Organizing Secretary. </br>
+                    </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ghana0gerneral-secretary.jpg" alt="">
