Add meta tags to show link snippets

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <meta name="description" content="NUGS SPB, Rebuilding an all inclusive Vibrant Union">
     <meta name="author" content="">
 
+    <!-- Social snippets which show when sharing on social networks -->
+    <meta property="og:image" content="https://raw.githubusercontent.com/Gideonamani/nugs-spb-website/master/img/dog.png" />
+    <meta property="og:image" content="img/ghana09.jpg" />
+    <meta property="og:image" content="img/logo00.jpg" />
+    <meta property="og:title" content="NUGS saint Petersburg Website Title." />
+    <meta property="og:description" content="NUGS SPB, Rebuilding an all inclusive Vibrant Union is the NUGS Website Awesome Description." />
+    <meta property="og:url" content="https://www.google.fr" />
+
     <title> Ghana community / NUGS saint Petersburg </title>
 
     <!-- Bootstrap Core CSS -->
